# cppbdd101

./: .gitattributes  .gitignore  .gitignore.swp  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  README.md  bitbucket-pipelines.yml  sonar-project.properties
edac/: CMakeLists.txt
edac/src/it/: CMakeLists.txt
edac/src/it/cppbdd101/edac/features/: edac.feature
edac/src/it/cppbdd101/edac/features/step_definitions/: ErrorsTestSteps.cpp  ErrorsTestSteps.hpp  edac.cpp
edac/src/main/cpp/: CMakeLists.txt
edac/src/main/cpp/cppbdd101/edac/: Demangle.cpp  Demangle.hpp  EdacError.cpp  EdacError.hpp  ErrnoMapper.cpp  ErrnoMapper.hpp  ErrorCode.cpp  ErrorCode.hpp  ErrorsList.cpp  ErrorsList.hpp  Exceptions.cpp  Exceptions.hpp  FutureError.cpp  FutureError.hpp  GenericError.cpp  GenericError.hpp  IOError.cpp  IOError.hpp  IsErrorActive.cpp  IsErrorActive.hpp  Logger.cpp  Logger.hpp  LoggingService.cpp  LoggingService.hpp  LowLevelApiError.cpp  LowLevelApiError.hpp  SystemError.cpp  SystemError.hpp  core.hpp
edac/src/main/cpp/cppbdd101/edac/private/: ErrorCodePrivate.cpp  ErrorCodePrivate.hpp  LoggerPrivate.cpp  LoggerPrivate.hpp
edac/src/main/cpp/edac/: EdacError.cpp  EdacError.hpp  ErrorsList.cpp  ErrorsList.hpp  FutureError.cpp  GenericError.cpp  GenericError.hpp  IOError.cpp  LoggingService.cpp  LoggingService.hpp
edac/src/test/cpp/: CMakeLists.txt
edac/src/test/cpp/cppbdd101/edac/: DemangleTest.cpp  DemangleTest.hpp  EdacErrorTest.cpp  EdacErrorTest.hpp  ErrorsListTest.cpp  ErrorsListTest.hpp  GoogleTestCustomEventListener.cpp  GoogleTestCustomEventListener.hpp  GtestIssue.cpp  GtestIssue.hpp  Test.cpp  Test.hpp  cppbdd101Test.cpp  unitTest.cpp
edac/src/test/cpp/edac/: EdacErrorTest.cpp  EdacErrorTest.hpp  ErrorsListTest.cpp  ErrorsListTest.hpp
lectures/: CMakeLists.txt
lectures/src/main/cpp/: CMakeLists.txt
lectures/src/main/cpp/cppbdd101/lectures/: CopyableAndMovable.cpp  CopyableAndMovable.hpp  CopyableOnly.cpp  CopyableOnly.hpp  MovableOnly.cpp  MovableOnly.hpp  NonCopyableNorMovable.cpp  NonCopyableNorMovable.hpp
lectures/src/main/cpp/cppbdd101/lectures/gotw/: Complex.hpp  Stack.hpp  StackException.cpp
lectures/src/main/cpp/lectures/ggltest/: Painter.cpp  Simple.cpp  Simple.hpp  Turtle.hpp
lectures/src/main/cpp/lectures/gotw/: Complex.cpp  Complex.hpp  Stack.cpp  Stack.hpp  StackException.cpp  StackException.hpp
lectures/src/test/cpp/: CMakeLists.txt
lectures/src/test/cpp/cppbdd101/lectures/: Test.cpp  Test.hpp  unitTest.cpp
lectures/src/test/cpp/cppbdd101/lectures/gotw/: ComplexTest.cpp  StackTest.cpp  StackTest.hpp
lectures/src/test/cpp/lectures/ggltest/: ExtendedTurtleTest.hpp  FakeTurtle.hpp  SimpleTest.cpp  SimpleTest.hpp  SimpleTurtleTest.cpp  TurtleTest.cpp  TurtleTest.hpp
lectures/src/test/cpp/lectures/gotw/: ComplexTest.cpp  ComplexTest.hpp  StackExceptionTest.cpp  StackExceptionTest.hpp  StackTest.cpp  StackTest.hpp
nbproject/: configurations.xml  project.xml
src/it/: CMakeLists.txt
src/it/cppbdd101/: cucumber.yml  turtle.feature
src/it/cppbdd101/features/: 001-Dummy.feature  002-Mock_Framework.feature  animal.feature
src/it/cppbdd101/features/step_definitions/: ApplicationSteps.cpp  ApplicationSteps.hpp  DummyTestSteps.cpp  DummyTestSteps.hpp  ItTest.cpp  ItTest.hpp  MockInterfaceContext.cpp  MockInterfaceContext.hpp
src/it/cppbdd101/support/: hooks.rb
src/main/cpp/: CMakeLists.txt  cppbdd101.cpp
src/main/cpp/cppbdd101/: Application.cpp  Application.hpp  Dummy.cpp  Dummy.hpp  Interface.cpp  Interface.hpp  LoggingService.cpp  LoggingService.hpp  main.cpp
src/main/cpp/cppbdd101/errh/: CMakeLists.txt  FutureError.hpp  GenericError.cpp  GenericError.hpp  IOError.hpp  SystemError.cpp  SystemError.hpp
src/main/cpp/cppbdd101/gl/: CMakeLists.txt  Painter.cpp  Painter.hpp  Turtle.cpp
src/main/resources/: Config.hpp.in  Version.hpp.in
src/main/resources/ci/: .appveyor.yml  .gitlab-ci.yml  .travis.yml  jenkinsfile
src/main/resources/ci/.travis/: cpp-travis.yml
src/main/resources/cmakeModule/: FindAPR-util.cmake  FindAPR.cmake  FindApacheRuntime.cmake  FindApr.cmake  FindCppBenchmark.cmake  FindCppCheck.cmake  FindCucumber-cpp.cmake  FindCustomBoost.cmake  FindGBenchmark.cmake  FindGMock.cmake  FindGoogleBenchmark.cmake  FindGoogleTest.cmake  FindLog4cxx.cmake  FindOpenDDS.cmake  FindOpenSplice.cmake  FindValgrind.cmake  FindXenomai.cmake
src/main/resources/config/: uncrustify.cfg
src/main/resources/guides/: CODE_OF_CONDUCT.md  Coding-Rules-check-list.md  CodingStyle.hpp  DoxygenRules.md  ISSUE_TEMPLATE.md  contributing.md  contribution-guidelines.md  gitFlow.md
src/main/resources/macros/: AddLinuxKernelModule.cmake  BullseyeCoverage.cmake  CMakeSettings.cmake  CodingStyle.cmake  CompilerOption.cmake  CpplintWrapper.cmake  CucumberTest.cmake  DefinePlatformSpecifc.cmake  External_GTest.cmake  GBenchmarkDownload.cmake  GccCoverage.cmake  GcovCodeCoverage.cmake  GtestDownload.cmake  LSBInfo.cmake  OCLint.cmake  PreventInSourceBuilds.cmake  Rules.cmake  Utils.cmake  config.hpp.cmake  cpack.cmake  cppcheck.cmake  cyclomatic.cmake  goals.cmake  pkg-config.pc.cmake  platformInfo.cmake  version.cmake
src/test/cpp/: CMakeLists.txt  Test.cpp  Test.hpp  cppbdd101Test.cpp
src/test/cpp/cppbdd101/: ApplicationTest.cpp  ApplicationTest.hpp  DummyTest.cpp  DummyTest.hpp  InterfaceTest.cpp  InterfaceTest.hpp  MockInterface.cpp  MockInterface.hpp  Test.cpp  Test.hpp  unitTest.cpp
src/test/cpp/cppbdd101/gl/: CMakeLists.txt  ExtendedTurtleTest.cpp  FakeTurtle.cpp  MockTurtle.cpp  MockTurtle.hpp  MockTurtleDelegate.cpp  MockTurtleDelegate.hpp  PainterTest.cpp  PainterTest.hpp  SimpleTurtleTest.hpp
